--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -64,7 +64,7 @@
     sectionId: 0
     sectionName: Product
     title: Formats
-    link: 
+    link: /formats/formats.html
     hasBubblePopOut: 1
     bubble:
       - 
@@ -119,7 +119,7 @@
     sectionId: 1
     sectionName: Support
     title: FAQ
-    link: 
+    link: /faq/faq.html	
     hasBubblePopOut: 1
     bubble: 
     -
@@ -149,7 +149,7 @@
     sectionId: 2
     sectionName: Download
     title: Prebid.js
-    link: 
+    link: /download.html
     hasBubblePopOut: 0
     bubble:
   
@@ -158,7 +158,7 @@
     sectionId: 2
     sectionName: Download
     title: Prebid Mobile
-    link: 
+    link: /prebid-mobile/prebid-mobile-download.html
     hasBubblePopOut: 1
     bubble: 
     -
@@ -205,7 +205,7 @@
     id: 14
     sectionId: 3
     sectionName: About Prebid
-    title: About Prebid
+    title: About Prebid Org
     link: what-is-prebid-org.html
     hasBubblePopOut: 0
     bubble:
