--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -21,7 +21,7 @@
       
       - 
         title: Plugins
-        link: dev-docs/plugins/index.html
+        link: /dev-docs/plugins/index.html
       - 
         title: React-Prebid
         link: /react-prebid/reactprebid.html
