--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -9,7 +9,7 @@
     sectionId: 0
     sectionName: Product
     title: Prebid.js
-    link: overview/intro.html
+    link: /overview/intro.html
     hasBubblePopOut: 1
     bubble:
       - 
