--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,3 +1,4 @@
+#--------------Prebid.js--------------|
 - sbSecId: 0
   title: Developer Quick Start
   link: 
@@ -173,7 +174,7 @@
   isHeader: 0
   
   
-#prebid mobile 
+#--------------Prebid Mobile--------------|
 
 - sbSecId: 1
   title: Prebid Mobile
@@ -283,7 +284,7 @@
   isLastSubSectionItem: 0 
   isHeader: 0
   
-  # overview side nav
+  #--------------Overview--------------|
 - sbSecId: 2
   title: Intro
   link:
@@ -332,7 +333,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   
-  #Ad Ops Side Nav
+#--------------Ad Ops--------------|
   
 - sbSecId: 3
   title: Ad Ops Tutorials
@@ -442,7 +443,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   
-#prebid video 
+#--------------Prebid Video--------------|
 
 - sbSecId: 4
   title: Prebid Video
@@ -474,7 +475,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   
-#prebid server
+#--------------Prebid Server--------------|
 
 - sbSecId: 5
   title: Prebid Server
@@ -530,6 +531,134 @@
   isLastSubSectionItem: 1
   isHeader: 0
   
+- sbSecId: 5
+  title: Bidder
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 1
+  
+- sbSecId: 5
+  title: Appnexus
+  link: /prebid-server/bidders/appnexus.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Audience Network
+  link: /prebid-server/bidders/audienceNetwork.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Beachfront
+  link: /prebid-server/bidders/beachfront.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Rubicon
+  link: /prebid-server/bidders/rubicon.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Sovrn
+  link: /prebid-server/bidders/sovrn.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Developers
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 1
+  
+- sbSecId: 5
+  title: Add A New Analytics Module
+  link: /prebid-server/developers/add-new-analytics-module.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Add A Bidder
+  link: /prebid-server/developers/add-new-bidder.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Cookie Sync Technical Details
+  link: /prebid-server/developers/cookie-syncs.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: GDPR Mechanics
+  link: /prebid-server/developers/gdpr.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Stored Requests
+  link: /prebid-server/developers/stored-requests.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Endpoints
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 1
+  
+- sbSecId: 5
+  title: Info - Bidders
+  link: /prebid-server/endpoints/info/bidders.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Info - Bidder Name
+  link: /prebid-server/endpoints/info/bidders/bidderName.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Bidders - Params
+  link: /prebid-server/endpoints/bidders/params.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Starting Cookie Sync
+  link: /prebid-server/endpoints/cookieSync.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Prebid Server AMP
+  link: /prebid-server/endpoints/openrtb2/amp.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Prebid Server Auction
+  link: /prebid-server/endpoints/openrtb2/auction.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Saving User Syncs
+  link: /prebid-server/endpoints/setuid.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  
+- sbSecId: 5
+  title: Get Status
+  link: /prebid-server/endpoints/status.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+
+  
+#--------------Examples--------------|
 - sbSecId: 6
   title: Examples
   link: 
