Added links to mobile sdks and fixed code not being formatted

--- a/_data/dropdowns.yml
+++ b/_data/dropdowns.yml
@@ -158,10 +158,10 @@
     bubble:
     -
       title: iOS
-      link:
+      link: https://github.com/prebid/prebid-mobile-ios
     -
       title: Android
-      link:
+      link: https://github.com/prebid/prebid-mobile-android
 
 #About Subnav
 -
